# inferno

./: .gitignore  .readthedocs.yaml  LICENSE  Pipfile  README.md  _internal.py  pyproject.toml  roadmap.md  wip-pyproject.toml
.github/workflows/: documenting.yaml  testing.yaml
docs/: 404.rst  Pipfile  common.rst  conf.gen.py  conf.py  conf.rtd.py  fundamentals.rst  index.md  index.rst  makedoc.py  monitoring.rst  neural.rst  rtd.post.py  rtd.pre.py  tutorials.rst
docs-override/reference/: inferno.neural.ALIF.rst  inferno.neural.AdEx.rst  inferno.neural.EIF.rst  inferno.neural.GLIF1.rst  inferno.neural.GLIF2.rst  inferno.neural.LIF.rst  inferno.neural.LinearDirect.rst  inferno.neural.LinearLateral.rst  inferno.neural.PassthroughSynapse.rst  inferno.neural.QIF.rst
docs/_templates/: classtemplate.rst
docs/examples/: florian-stdp.md  index.md  quickstart.md
docs/guide/: concepts.md  considerations.md  extending.md  index.md  inferno.md  mathematics.md  neuronal.md  pragmatics.md  snn.md
docs/reference/: distributions.md  extra.md  functional.md  index.md  inferno.md  interpolation.md  learn-functional.md  learn.md  neural-functional.md  neural.md  observe.md  stats.md  types.md  typing.md
docs/zoo/: index.md  learning-other.md  learning-resume.md  learning-stdp.md  neurons-adaptation.md  neurons-linear.md  neurons-nonlinear.md  synapses-conductance.md  synapses-current.md
envs/: buildenv-macos.yaml  devenv-linux-cpu.yaml  devenv-macos.yaml  devenv-win-cpu.yaml  devenv.yaml  docenv-linux-cpu.yaml  docenv-macos.yaml  docsenv-macos.yaml  docsenv-tempfix.yaml  frozendev-macos.yaml  testenv-linux-cpu.yaml  testenv-ubuntucpu.yaml
inferno/: __init__.py  bounding.py  dists.py  infrastructure.py  math.py  mathops.py  spiketrace.py  tensor.py
inferno/_future/: __init__.py  encoders.py  infrastructure.py  math.py
inferno/_internal/: __init__.py  argtest.py  exceptions.py  utils.py
inferno/bounding/: functions.py  types.py
inferno/common/: __init__.py  hookables.py  infrastructure.py  math.py  mixins.py  series.py  tensor.py
inferno/core/: __init__.py  infrastructure.py  math.py  tensor.py  trace.py
inferno/dists/: base.py  distributions.py
inferno/extra/: __init__.py  functional.py  neural.py
inferno/functional/: __init__.py  bounding.py  dimreductiion.py  extrapolation.py  interpolation.py  protocols.py  stdkernels.py
inferno/infernotypes/: functional.py
inferno/interpolation/: functions.py  types.py
inferno/learn/: __init__.py  base.py  hooks.py
inferno/learning/: __init__.py  (+5 more)
misc/: roadmap.md  sageplots.py
monitoring/: __init__.py  monitors.py
(+295 files in other folders)
