[build-system]
requires = ["hatchling>=1.23.0"]
build-backend = "hatchling.build"

[project]
name = "inferno"
version = "0.0.1"
description = "An Extensible Spiking Neural Network Library"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Marissa Dominijanni", email = "mdomini@buffalo.edu" }]

dependencies = ["numpy~=1.26", "einops~=0.7"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
torch = [
    "torch==2.2.2 ; sys_platform == 'darwin'",
    "torchvision==0.17.2 ; sys_platform == 'darwin'",
    "torch==2.2.2 ; sys_platform == 'win32'",
    "torchvision==0.17.2 ; sys_platform == 'win32'",
]

[project.urls]
Homepage = "https://github.com/mdominijanni/inferno"
Documentation = "https://inferno-ai.dev"

[tool.hatch.build.targets.sdist]
only-include = ["inferno"]
